[gd_scene load_steps=6 format=3 uid="uid://djocap18jqmio"]

[ext_resource type="Script" path="res://assets/scripts/top_bar.gd" id="1_h3xu0"]

[sub_resource type="Gradient" id="Gradient_rhwdf"]
offsets = PackedFloat32Array(0.863636, 1)
colors = PackedColorArray(0.0941176, 0.0941176, 0.0941176, 1, 0.223103, 0.223103, 0.223103, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o8ing"]
gradient = SubResource("Gradient_rhwdf")
fill_to = Vector2(0, 0.990826)

[sub_resource type="Gradient" id="Gradient_viu6e"]
colors = PackedColorArray(0.0941176, 0.0941176, 0.0941176, 1, 0.389287, 0.389287, 0.389286, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gysfv"]
gradient = SubResource("Gradient_viu6e")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[node name="Top_Bar" type="TextureRect"]
offset_left = -832.0
offset_top = -394.0
offset_right = 1168.0
offset_bottom = -273.0
texture = SubResource("GradientTexture2D_o8ing")
script = ExtResource("1_h3xu0")

[node name="Highlight" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 44.0
offset_right = 219.0
offset_bottom = 121.0
texture = SubResource("GradientTexture2D_gysfv")

[node name="Button01" type="Button" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 26.0
offset_right = 208.0
offset_bottom = 97.0
text = "Manhwa"

[node name="Button02" type="Button" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 26.0
offset_right = 388.0
offset_bottom = 97.0
text = "Manga"

[node name="Button03" type="Button" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 26.0
offset_right = 568.0
offset_bottom = 97.0
text = "Comics"

[node name="Button04" type="Button" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 26.0
offset_right = 748.0
offset_bottom = 97.0
text = "Books / Novels"

[node name="Button05" type="Button" parent="."]
layout_mode = 0
offset_left = 1782.0
offset_top = 26.0
offset_right = 1938.0
offset_bottom = 97.0
text = "Options"

[node name="Search_Bar" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 26.0
offset_right = 1734.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 27
placeholder_text = "Search..."

[connection signal="pressed" from="Button01" to="." method="_on_button_01_pressed"]
[connection signal="pressed" from="Button02" to="." method="_on_button_02_pressed"]
[connection signal="pressed" from="Button03" to="." method="_on_button_03_pressed"]
[connection signal="pressed" from="Button04" to="." method="_on_button_04_pressed"]
[connection signal="pressed" from="Button05" to="." method="_on_button_05_pressed"]
